- change java version to 8